bg-overflow design fix

--- a/frontend/src/scss/_global.scss
+++ b/frontend/src/scss/_global.scss
@@ -81,6 +81,7 @@ body.home .glide__slide--active {
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
+  z-index: 3;
 }
 
 body.home .glide__arrows {
